--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "core-js": "^3.6.5",
     "dotenv": "^16.0.3",
     "pinia": "^2.0.11",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
     "vue-i18n": "^9.0.0",
@@ -30,6 +31,7 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^9.0.0",
     "eslint-webpack-plugin": "^3.1.1",
+    "pinia-logger": "^1.3.12",
     "prettier": "^2.5.1"
   },
   "browserslist": [
