--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "core-js": "^3.6.5",
     "dotenv": "^16.0.3",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "pinia": "^2.0.11",
     "pinia-plugin-persistedstate": "^3.1.0",
     "quasar": "^2.6.0",
